# Partiels

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CPack.cmake  Dona.ptldoc  Features.ptldoc  Neuralyzer-ToDo.md  README.md  TODO.md  merge_translations.sh  test.cmake  vamp.cmake  xcode-warnings.cmake
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codacy.yml  copilot-setup-steps.yml
Analyse/: Analyse.jucer
BinaryData/CoAnalyzer/: ContextTemplate.md  Instructions_0.md  Instructions_v1.md  Instructions_v2.md
BinaryData/Context/: Resource_1.md  Resource_2.md  Resource_3.md  Resource_4.md
BinaryData/Misc/: About.txt  ChangeLog.txt  Partiels.desktop  linux-install.sh  macos-dmg-config.json
BinaryData/Neuralyzer/: Instructions.md  ToolsList.json  claude_desktop_config.json  defaultModels.txt  default_models.json  invalid_models.json  tools_list.json
BinaryData/Patchs/: Voice.ptldoc  partiels-plot-line.pd  partiels-plot-matrix-ebd.pd  partiels-plot-matrix-help.pd  partiels-plot-matrix.maxhelp  partiels-plot-matrix.maxpat  partiels-plot-matrix.pd  partiels-plot-point-help.pd  partiels-plot-point.maxhelp  partiels-plot-point.pd  partiels-plot-spectrum-help.pd  partiels-plot-spectrum.pd  partiels-spectrum.pd
BinaryData/Preset/: Partiels.trackpresets.settings
BinaryData/Resource/: About.txt  ChangeLog.txt  FactoryTemplate.ptldoc  Partiels.desktop  TODO.md  TranslationKeysExtractor.cmake  TranslationKeysUpdater.cmake  XcodeSetupWarnings.cmake  generate-rag-json.py  generate-translation-file.ps1  generate-translation-file.sh  linux-install.sh  linux-uninstall.sh  macos-dmg-config.json  macos-dmg-icon.icns  vamp-plugin-sdk-src.patch  windows-package.iss
BinaryData/Sonifier/: smo-curve.pd  smo-example.pd  smo-marker.pd  smo-matrix.pd
BinaryData/Tests/: Columns.json  ColumnsArgs.xml  CompareImages.cmake  Dona.ptldoc  Error.csv  Error.cue  Error.json  ErrorMultipleType.json  ErrorNoTime.json  MarkerNoType.json  Markers-Max.txt  Markers-PureData.txt  Markers-Reaper-M.csv  Markers-Reaper-R.csv  Markers.csv  Markers.cue  Markers.json  Markers.lab  MarkersArgs.xml  MarkersSpace.csv  MarkersTab.csv  NeuralyzerChatTemplate.jinja  PluginList.json  PluginList.xml  PluginListDescription.json  PluginListDescription.xml  Points-Max.txt  Points-PureData.txt  Points.csv  Points.json  PointsArgs.xml  PointsOptional.json  PointsSpace.csv  PointsTab.csv  PointsWithExtra.csv  PointsWithExtra.json  PointsWithExtraFiltered.csv  PointsWithExtraFiltered.json  Reference.ptldoc  SpectralCentroid-Failure.csv  (+11 more)
BinaryData/Translations/: English.txt  Fr.txt  French.txt  Portuguese.txt
Dependencies/Misc/: Misc.cmake  README.md
Dependencies/sdif/: CMakeLists.txt  README.md
Dependencies/sdif/include/: sdif.h  sdif_version.h
Dependencies/sdif/source/: SdifCheck.c  SdifConvToText.c  SdifErrMess.c  SdifErrMess.h  SdifFGet.c  SdifFGet.h  SdifFPrint.c  SdifFPut.c  SdifFPut.h  SdifFRead.c  SdifFRead.h  SdifFScan.c  SdifFScan.h  SdifFWrite.c  SdifFWrite.h  SdifFile.c  SdifFile.h  SdifFrame.c  SdifFrame.h  SdifFrameType.c  SdifFrameType.h  SdifGlobals.c  SdifGlobals.h  SdifHard_OS.c  SdifHard_OS.h  SdifHash.c  SdifHash.h  SdifHighLevel.c  SdifHighLevel.h  SdifList.c  SdifList.h  SdifMatrix.c  SdifMatrix.h  SdifMatrixType.c  SdifMatrixType.h  SdifNameValue.c  SdifPreTypes.c  SdifPrint.c  SdifRWLowLevel.c  SdifRWLowLevel.h  (+13 more)
Dependencies/sdif/test/: list-nvt.c  list-types.c  read.c  test2.c
Docs/: .gitattributes  Partiels-Manual.md  style.css
Docs/Project/: Centroid.json  J'attendrai.ptldoc
Scripts/: Partiels-Code-Signing-Certificate-Sectigo.pfx  clang-format-all.sh  clang-format-changes.sh  find-translation.py  linux-package.sh  macos-build.sh  macos-export-archive.plist  macos-package.sh  macos-publish-all.sh  macos-publish.sh  macos-release.sh  macos-stringify-ips.sh  macos-test.sh  publish-all.sh  windows-package.iss
Source/: CLI.cpp  Main.cpp  Test.cpp
Source/Analyzer/: AnlAnalyzerDirector.cpp  AnlAnalyzerDirector.h  AnlAnalyzerExporter.cpp  AnlAnalyzerExporter.h  AnlAnalyzerInstantRenderer.cpp  AnlAnalyzerInstantRenderer.h  AnlAnalyzerModel.cpp  AnlAnalyzerModel.h  AnlAnalyzerPlot.cpp  AnlAnalyzerPlot.h  AnlAnalyzerPluginInstance.cpp  AnlAnalyzerPluginInstance.h  AnlAnalyzerPluginManager.cpp  AnlAnalyzerPluginManager.h  AnlAnalyzerProcessor.cpp  AnlAnalyzerProcessor.h  AnlAnalyzerPropertyPanel.cpp  AnlAnalyzerPropertyPanel.h  AnlAnalyzerRenderer.cpp  AnlAnalyzerRenderer.h  AnlAnalyzerRendererFrame.cpp  AnlAnalyzerRendererFrame.h  AnlAnalyzerResultRenderer.cpp  AnlAnalyzerResultRenderer.h  AnlAnalyzerResults.cpp  AnlAnalyzerResults.h  AnlAnalyzerSection.cpp  AnlAnalyzerSection.h  AnlAnalyzerSnapshot.cpp  AnlAnalyzerSnapshot.h  AnlAnalyzerThumbnail.cpp  AnlAnalyzerThumbnail.h  AnlAnalyzerTimeRenderer.cpp  AnlAnalyzerTimeRenderer.h
Source/Application/: AnlApplicationAbout.cpp  AnlApplicationAbout.h  AnlApplicationAudioReader.cpp  AnlApplicationAudioReader.h  AnlApplicationAudioSettings.cpp  AnlApplicationAudioSettings.h  AnlApplicationBatcher.cpp  AnlApplicationBatcher.h  AnlApplicationCoAnalyzer.cpp  AnlApplicationCoAnalyzer.h  AnlApplicationCommandIDs.h  AnlApplicationCommandLine.cpp  AnlApplicationCommandLine.h  AnlApplicationCommandTarget.cpp  AnlApplicationCommandTarget.h  AnlApplicationController.cpp  AnlApplicationController.h  AnlApplicationConverter.cpp  AnlApplicationConverter.h  AnlApplicationConverterPanel.cpp  AnlApplicationConverterPanel.h  AnlApplicationExporter.cpp  AnlApplicationExporter.h  AnlApplicationFileManager.cpp  AnlApplicationFileManager.h  AnlApplicationFontManager.cpp  AnlApplicationFontManager.h  AnlApplicationGraphicPreset.cpp  (+61 more)
VampPlugins/: AnlVampPlugins.cpp  AnlVampPlugins.h  CMakeLists.txt  partiels-vamp-plugins.cat
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  ChangeLog.txt  Install.txt  Makefile  Partiels-Manual.md  Partiels-Release.md  PartielsPackage.sh  cmake_install.cmake  vamp-hostsdk.pc.in  vamp.pc.in
build_test/: CMakeCache.txt  ChangeLog.txt  vamp-sdk.pc.in
(+615 files in other folders)
